feature/add ssl to server

--- a/.env-example
+++ b/.env-example
@@ -4,5 +4,5 @@ LOG_LEVEL=debug
 REQUEST_LIMIT=100kb
 SESSION_SECRET=mySecret
 OPENAPI_SPEC=/api/v1/spec
-API_ADAPTER=http://localhost:3001
-API_ADAPTER=30
+API_MAIL_ADAPTER=
+API_MAIL_ADAPTER_TIMEOUT=
